# whatslite

./: .allowed_signers  .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  NOTICE.md  PRODUCT-BRIEF.md  README.md  SECURITY.md  go.mod  go.sum  main.go  wails.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release.yml
cmd/gio-shot/: main.go
cmd/walite-cli/: main.go
cmd/whatslite-gio/: main.go  run.sh  theme.go  ui.go
docs/: ARCHITECTURE.md  gio-ui-audit.md  ui-capture.md
frontend/: .stylelintrc.json  README.md  index.html  package-lock.json  package.json  package.json.md5  vite.config.js
frontend/src/: App.svelte  main.js  stores.js
internal/app/: app.go  app_audio.go  app_calls.go  app_camera.go  app_channels.go  app_chats.go  app_communities.go  app_connect.go  app_contacts.go  app_gif.go  app_gifs.go  app_groups.go  app_headless.go  app_ipc.go  app_ipc_test.go  (+24 more)
qt-app/: ARCHITECTURE.md  AppController.h  Avatar.qml  CMakeLists.txt  Icon.qml  JsonListModel.h  LIMITATIONS.md  README.md  main.cpp  main.qml  run.sh
qt-app/i18n/: en.json  es.json  id.json
qt-poc/: CMakeLists.txt  MessageModel.h  WaEngineClient.cpp  WaEngineClient.h  main.cpp  main.qml  main_bridge.cpp
qt-poc/mockengine/: main.go
qt-poc/probe/: main.go
scripts/: fill-locales.mjs  install.sh  package-appimage.sh  snap.sh
tools/: audit.sh  compare.sh  diff.sh  fetch-ref.sh  layout-diff.py  memmon.sh  memtest.md  probe.py  sample.sh  snap-gio.sh  snap-qml.sh  snap-svelte.sh  ui-capture.sh
(+213 files in other folders)
